// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status Button matches snapshot for own on false 1`] = `
<div>
  <div
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-box-seam-fill"
    />
  </div>
</div>
`;

exports[`Status Button matches snapshot for own on true 1`] = `
<div>
  <div
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-box-seam-fill"
    />
  </div>
</div>
`;

exports[`Status Button matches snapshot for wanttoplay on false 1`] = `
<div>
  <div
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-dice-3-fill"
    />
  </div>
</div>
`;

exports[`Status Button matches snapshot for wanttoplay on true 1`] = `
<div>
  <div
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-dice-3-fill"
    />
  </div>
</div>
`;

exports[`Status Button matches snapshot for wishlist on false 1`] = `
<div>
  <div
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-gift-fill"
    />
  </div>
</div>
`;

exports[`Status Button matches snapshot for wishlist on true 1`] = `
<div>
  <div
    class="button"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-gift-fill"
    />
  </div>
</div>
`;

exports[`Status Button matches snapshot when loading 1`] = `
<div>
  <div
    class="spinner spinner-border"
  />
</div>
`;

exports[`Status Button passes class names to container 1`] = `
<div>
  <div
    class="button passed class names"
    role="button"
    tabindex="0"
  >
    <i
      class="bi bi-box-seam-fill"
    />
  </div>
</div>
`;

exports[`Status Button passes styles to container 1`] = `
<div>
  <div
    class="button"
    role="button"
    style="width: 100%; align-self: end; margin-block-start: 1em;"
    tabindex="0"
  >
    <i
      class="bi bi-box-seam-fill"
    />
  </div>
</div>
`;
